Cleanup HashSet<>(asList())